if(EXIV2_FOUND)
    include_directories(${EXIV2_INCLUDE_DIR})
    ADD_STRIGI_ANALYZER(exiv exivendanalyzer.cpp)
    target_link_libraries(exiv ${EXIV2_LIBRARIES})
endif()

if(FFMPEG_FOUND)
    include_directories(${FFMPEG_INCLUDE_DIRS})
    add_definitions(-D__STDC_CONSTANT_MACROS)
    ADD_STRIGI_ANALYZER(ffmpeg ffmpegendanalyzer.cpp)
    # set_target_properties( ffmpeg PROPERTIES COMPILE_FLAGS "${FFMPEG_DEFINITIONS}" )
    target_link_libraries(ffmpeg ${FFMPEG_LIBRARIES})
endif()
